<resources>
    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="trang_ch__string">Trang chủ</string>
    <string name="b__s_u_t_p_string">Bộ sư tập</string>
    <string name="kh_m_ph__string">Khám Phá</string>
    <string name="xem_th_m_string">Xem thêm</string>
    <string name="lightnovel_string">Lightnovel</string>
    <string name="teck_string">Teck</string>
    <string name="story_string">Story</string>
    <string name="_25_xuhuong">25 xu hướng CN định hình cuộc CMCN 4.0</string>
    <string name="harry_potter_and_the_philosopher_s_stone_paperback_string">Harry Potter and the Philosophers Stone Paperback</string>
    <string name="__c_nh_n_t_m_string">c Nhn Tm</string>
    <string name="steve_jobs___s_ng____thay___i_th__gi_i_string">Steve Jobs-STĐTG</string>
    <string name="steve_jobs___s_ng____thay___i_th__gi_i_ek1_string">Steve Jobs - STĐTG</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_email">Email</string>
    <string name="msg_email_ho_c_t_n">Email hoặc tên tài khoản</string>
    <string name="lbl_ng_nh_p">Đăng nhập</string>
    <string name="msg_c_t_i_kho_n">Đã có tài khoản? Đăng nhập</string>
    <string name="lbl_ng_k">Đăng ký</string>
    <string name="lbl_m_t_kh_u">Mật khẩu</string>
    <string name="msg_ng_nh_p_b_ng2">Đăng nhập bằng Facebook</string>
    <string name="msg_c_t_i_kho_n2">Đã có tài khoản? </string>
    <string name="msg_ng_nh_p_b_ng">Đăng nhập bằng Google</string>
    <string name="msg_ch_a_c_t_i_kho2">Chưa có tài khoản?</string>
    <string name="msg_ng_k_t_i_kho">Đăng ký tài khoản</string>
    <string name="lbl_t_n_t_i_kho_n">Tên tài khoản </string>
    <string name="lbl_hehehehe">hehehehe</string>
    <string name="msg_nh_p_l_i_m_t_kh">Nhập lại mật khẩu</string>
    <string name="msg_ch_a_c_t_i_kho">Chưa có tài khoản? Đăng ký</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>