<?xml version="1.0" encoding="utf-8"?>

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="390dp"
	android:layout_height="wrap_content"
	tools:context=".coletion">

	<ScrollView
		android:id="@+id/main_char"
		android:layout_width="390dp"
		android:layout_height="wrap_content">

		<RelativeLayout
			android:id="@+id/content_container"
			android:layout_width="390dp"
			android:layout_height="match_parent">


			<RelativeLayout
				android:id="@+id/page_main_char_ek1"
				android:layout_width="390dp"
				android:layout_height="match_parent"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp">

				<View
					android:id="@+id/_bg__main_char_ek2"
					android:layout_width="390dp"
					android:layout_height="900dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__main_char_ek2_shape" />

				<View
					android:id="@+id/rectangle_1"
					android:layout_width="325dp"
					android:layout_height="32dp"
					android:layout_marginStart="9dp"
					android:layout_marginTop="10dp"
					android:background="@drawable/rectangle_1_shape" />

				<View
					android:id="@+id/rectangle_2"
					android:layout_width="37dp"
					android:layout_height="32dp"
					android:layout_marginStart="344dp"
					android:layout_marginTop="10dp"
					android:background="@drawable/rectangle_2_shape" />

				<TextView
					android:id="@+id/nh_p_d__li_u_c_n_t_m"
					android:layout_width="280.2dp"
					android:layout_height="24.2dp"
					android:layout_marginLeft="60dp"
					android:layout_marginTop="17dp"
					android:text="Dữ Liệu Cần tìm"
					android:textColor="@color/nh_p_d__li_u_c_n_t_m_color"
					android:textSize="12sp" />

				<ImageView
					android:id="@+id/search"
					android:layout_width="18dp"
					android:layout_height="18dp"
					android:layout_marginStart="25dp"
					android:layout_marginTop="17dp"
					android:contentDescription="search"
					android:src="@drawable/search" />


				<TextView
					android:id="@+id/trang_ch_"
					android:layout_width="117.4dp"
					android:layout_height="28.4dp"
					android:layout_marginLeft="34dp"
					android:layout_marginTop="63dp"
					android:text="@string/trang_ch__string"
					android:textColor="@color/trang_ch__color"
					android:textSize="14sp"
					/>


				<TextView
					android:id="@+id/b__s_u_t_p"
					android:layout_width="117.4dp"
					android:layout_height="28.4dp"
					android:layout_marginLeft="302dp"
					android:layout_marginTop="63dp"
					android:text="@string/b__s_u_t_p_string"
					android:textColor="@color/trang_ch__color"
					android:textSize="14sp" />

				<TextView
					android:id="@+id/kh_m_ph_"
					android:layout_width="117.4dp"
					android:layout_height="28.4dp"
					android:layout_marginLeft="167dp"
					android:layout_marginTop="62dp"
					android:text="@string/kh_m_ph__string"
					android:textColor="@color/trang_ch__color"
					android:textSize="14sp"
					/>

				<ImageView
					android:layout_width="124dp"
					android:layout_height="1dp"
					android:layout_marginStart="268dp"
					android:layout_marginTop="81dp"
					android:contentDescription="line_1"
					android:src="@drawable/line_1" />

				<View
					android:id="@+id/rectangle_12"
					android:layout_width="390dp"
					android:layout_height="39dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="900dp"
					android:background="@drawable/rectangle_12_shape" />

				<ImageView
					android:id="@+id/notifications_active"
					android:layout_width="29dp"
					android:layout_height="29dp"
					android:layout_marginStart="180dp"
					android:layout_marginTop="900dp"
					android:contentDescription="notifications_active"
					android:src="@drawable/notifications_active"
					/>

				<ImageView
					android:id="@+id/account_circle"
					android:layout_width="31dp"
					android:layout_height="31dp"
					android:layout_marginStart="300dp"
					android:layout_marginTop="900dp"
					android:contentDescription="account_circle"
					android:src="@drawable/account_circle" />

				<View
					android:id="@+id/home"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_marginStart="60dp"
					android:layout_marginTop="900dp"
					android:background="@drawable/home"
					/>


				<ImageView
					android:id="@+id/shopping_cart"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_marginStart="350dp"
					android:layout_marginTop="13dp"
					android:contentDescription="shopping_cart"
					android:src="@drawable/shopping_cart"
					/>

				<View
					android:id="@+id/rectangle_4"
					android:layout_width="350dp"
					android:layout_height="93dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="20dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="120dp"
					android:background="@drawable/colection"
					/>
				<View
					android:id="@+id/add"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="175dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="148dp"
					android:background="@drawable/add"
					/>

				<View
					android:id="@+id/cl_like"
					android:layout_width="350dp"
					android:layout_height="93dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="229dp"
					android:background="@drawable/colection1"
					/>

				<View
					android:id="@+id/like"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="40dp"
					android:layout_alignParentTop="true"
					android:layout_marginTop="260dp"
					android:background="@drawable/favorite"
					/>

				<TextView
					android:layout_width="150dp"
					android:layout_height="match_parent"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="90dp"
					android:layout_marginTop="256dp"
					android:text="Yêu Thích"
					android:textSize="27dp"
					android:textStyle="normal">
				</TextView>

				<TextView
					android:layout_width="150dp"
					android:layout_height="match_parent"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="280dp"
					android:layout_marginTop="265dp"
					android:text="58 Quyển"
					android:textSize="15dp"
					android:textStyle="normal">
				</TextView>


				<View
					android:layout_width="350dp"
					android:layout_height="93dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="340dp"
					android:background="@drawable/colection2" />

				<View
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="40dp"
					android:layout_marginTop="365dp"
					android:background="@drawable/eco" />

				<TextView
					android:layout_width="150dp"
					android:layout_height="match_parent"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="90dp"
					android:layout_marginTop="368dp"
					android:text="Thiên Nhiên"
					android:textSize="27dp"
					android:textStyle="normal">
				</TextView>

				<TextView
					android:layout_width="150dp"
					android:layout_height="match_parent"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="280dp"
					android:layout_marginTop="380dp"
					android:text="18 Quyển"
					android:textSize="15dp"
					android:textStyle="normal">
				</TextView>

				<View
					android:layout_width="350dp"
					android:layout_height="93dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="449dp"
					android:background="@drawable/colection3" />

				<View
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="40dp"
					android:layout_marginTop="475dp"
					android:background="@drawable/sprint" />

				<TextView
					android:layout_width="150dp"
					android:layout_height="match_parent"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="90dp"
					android:layout_marginTop="475dp"
					android:text="Hành Động"
					android:textSize="27dp"
					android:textStyle="normal">
				</TextView>

				<TextView
					android:layout_width="150dp"
					android:layout_height="match_parent"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="279dp"
					android:layout_marginTop="487dp"
					android:text="12 Quyển"
					android:textSize="15dp"
					android:textStyle="normal"/>
			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>